<resources>
    <string name="app_name">MyContact</string>
    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sms">Sms</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="ok">Ok</string>




</resources>