<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_contact_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="@dimen/space_very_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/space_small"
        android:background="@drawable/ic_contact_picture" >

    </ImageView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_small"
        android:textSize="@dimen/text_size_2xLarge"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_contact_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Mohammad yazdi"/>

    <TextView
        android:id="@+id/tv_phoneNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xLarge"
        android:layout_marginLeft="@dimen/space_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="phone Number :">

    </TextView>

    <TextView
        android:id="@+id/tv_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/space_small"
        app:layout_constraintLeft_toRightOf="@id/tv_phoneNumber_text"
       app:layout_constraintTop_toTopOf="@id/tv_phoneNumber_text"
        app:layout_constraintBottom_toBottomOf="@id/tv_phoneNumber_text"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:text="09157973269">

    </TextView>

    <ImageButton
        android:id="@+id/ib_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_large"
        app:layout_constraintLeft_toRightOf="@id/ib_sms"
       app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber"
        android:layout_marginTop="@dimen/space_large"

        android:background="@drawable/ic_call"

        >

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ib_sms"
        app:layout_constraintRight_toRightOf="@id/ib_call"
        app:layout_constraintLeft_toLeftOf="@id/ib_call"
        android:layout_marginTop="@dimen/space_small"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:text="@string/call">

    </TextView>

    <ImageButton
        android:id="@+id/ib_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_medium"
        app:layout_constraintLeft_toLeftOf="@id/tv_phoneNumber_text"

        app:layout_constraintBottom_toBottomOf="@id/ib_call"
        android:background="@drawable/ic_sms">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ib_sms"
        app:layout_constraintRight_toRightOf="@id/ib_sms"
        app:layout_constraintLeft_toLeftOf="@id/ib_sms"
        android:layout_marginTop="@dimen/space_small"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:text="@string/sms">

    </TextView>

    <TextView
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_delete"
        android:layout_marginBottom="@dimen/space_large"
        android:layout_marginLeft="@dimen/space_large"
        android:layout_marginRight="@dimen/space_small"
        android:textSize="@dimen/text_size_xLarge"
        android:padding="@dimen/space_medium"/>

    <TextView

        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_edit"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit"
        app:layout_constraintLeft_toRightOf="@id/btn_edit"
        android:layout_marginRight="@dimen/space_large"
        android:layout_marginLeft="@dimen/space_small"

        android:textSize="@dimen/text_size_xLarge"
        android:padding="@dimen/space_medium"/>


</androidx.constraintlayout.widget.ConstraintLayout>